--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@nestjs/platform-express": "^9.3.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
-    "@types/oauth2orize": "^1.8.11",
     "@types/request-ip": "^0.0.37",
     "bcrypt": "^5.1.0",
     "chalk": "^2.4.2",
@@ -48,12 +47,11 @@
     "ioredis": "^5.3.1",
     "log4js": "^6.8.0",
     "mysql2": "^3.1.2",
-    "nest-oauth2-server": "^1.1.2",
     "nestjs-typeorm-paginate": "^4.0.3",
-    "oauth2-server": "^3.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.2.0",
@@ -71,7 +69,6 @@
     "@types/express-session": "^1.17.6",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
-    "@types/oauth2-server": "^3.0.13",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
