--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@casl/ability": "^6.3.3",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/common": "^9.3.0",
     "@nestjs/core": "^9.3.0",
@@ -46,6 +45,7 @@
     "helmet": "^6.0.1",
     "ioredis": "^5.3.1",
     "log4js": "^6.8.0",
+    "moment": "^2.29.4",
     "mysql2": "^3.1.2",
     "nestjs-typeorm-paginate": "^4.0.3",
     "passport": "^0.6.0",
